# rag_build

./: .gitignore  _debug_component.py  _pre_migrate_check.py  adalflow_processing.py  get_content.py  init_schema.py  load_faiss.py  load_pkl.py  openwiki.py  pyproject.toml  test_connect.py
LLMClients/: dashscope_client.py
api/: api.py  config.py  data_pipeline.py  main.py  prompts.py  rag.py  simple_chat.py  websocket_wiki.py  wiki_generation.py
api/config/: embedder.json  generator.json  repo.json
core/: __init__.py  cli.py  rag_engine.py
core/config/: __init__.py
core/flows/: __init__.py  base.py  chat_flow.py  research_flow.py  wiki_flow.py
core/ingestion/: __init__.py  ingestor.py
core/models/: __init__.py
core/prompts/: __init__.py  rag.py
core/utils/: documents.py  language.py  llm.py  repo.py  sse.py
plans/: phase2_architecture.md
rag_optimizer/: __init__.py
rag_optimizer/cache/: __init__.py  embedding_cache.py  redis_client.py  repo_lock.py  semantic_cache.py  wiki_cache.py
rag_optimizer/config/: __init__.py  settings.py
rag_optimizer/db/: __init__.py  connection.py  dump_pkl_data_03.py  models.py  repository.py
rag_optimizer/integration/: __init__.py  deepwiki_adapter.py
rag_optimizer/migration/: __init__.py  pkl_to_pg.py  pkl_to_pg_02.py  pkl_to_pg_v3.py
rag_optimizer/pipeline/: __init__.py  ingestion.py  rag_engine.py
rag_optimizer/retrieval/: __init__.py  hybrid_retriever.py
rag_optimizer/scripts/: 001_create_schema.sql
scripts/simulate/: __init__.py  data_ingestion.py  debug_flow.py  (+1 more)
utils/: read_all_documents.py
(+17 files in other folders)
