[project]
name = "test-milvus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adalflow>=1.1.3",
    "asyncpg>=0.31.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "psycopg2>=2.9.12",
    "pymilvus>=3.0.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]
