[project]
name = "rag_build"
version = "2.0.0"
description = "DeepWiki-open 重构版 — 基于 PostgreSQL + pgvector 的 RAG 系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adalflow>=1.1.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "openai>=2.36.0",
    "google-generativeai>=0.8.0",
    "psycopg2>=2.9.12",
    "sqlalchemy>=2.0.49",
    "numpy>=2.4.4",
    "redis>=7.4.0",
    "tiktoken>=0.9.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.12",
]
